# battleship-zkvm

./: .gitignore
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: logic.rs  main.rs  terminal.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs  miss_hit.rs  no_ship_sunk.rs  ship_sunk.rs
