[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ['std'] }
core = { path = "../../core" }
sha2 = "0.10"

[[bin]]
name = "miss_hit"
path = "src/miss_hit.rs"

[[bin]]
name = "ship_sunk"
path = "src/ship_sunk.rs"

[[bin]]
name = "no_ship_sunk"
path = "src/no_ship_sunk.rs"


